# quantum-fdtd

./: CMakeLists.txt  COPYING.md
src/: core.cc  core.h  wavefunction.cc  wavefunction.h
test/: CMakeLists.txt  CMakeLists.txt.in  test_wavefunction.cc
